--- a/e-commerce website/styles.css
+++ b/e-commerce website/styles.css
@@ -160,10 +160,7 @@ LANDING
   
   .header__img--wrapper {
     padding: 20px;
-  
-    /* Added this after the tutorial to 
-    show it over the wave on larger screens */
-    z-index: 50;
+    z-index: 2;
   }
   
   .container {
@@ -175,6 +172,7 @@ LANDING
     max-width: 1200px;
     margin: 0 auto;
   }
+
   
   .row__column {
     display: flex;
@@ -188,8 +186,176 @@ LANDING
 
   /* HIGHLIGHTS */
 
+  #highlights{
+    position: relative;
+    max-width: 100vw;
+  }
+
+ #highlights:before,
+ #highlights:after{
+  background: url(./assets/wave.svg);
+  content: "";
+  position: absolute;
+  width: 101vw;
+  height: 12vw;
+  left: 0;
+  z-index: 1;
+  background-size: cover;
+  background-repeat: no-repeat;
+ }
+
+
+  #highlights:before{
+    top: 1px;
+    transform: translateY(-100%);
+  }
+
+  #highlights:after{
+    bottom: 1px;
+    transform: translateY(100%) rotate(180deg);
+  }
+
+
   .highlight__wrapper{
     display: flex;
   }
+
+  .highlight{
+    padding: 0 24px;
+    width: calc(100% / 3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .highlight__para{
+    text-align: center;
+    max-width: 280px;
+  }
+
+  .highlight__img{
+    border: 2px solid #7342d65d;
+    color: #7342d6;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    font-size: 32px;
+    margin-bottom: 24px;
+  }
+
+  .highlight__subtitle{
+    font-size: 20px;
+    margin-bottom: 16px;
+  }
+
+  /* FEATURES */
+
+  #features{
+    padding-top: 8vw;
+    background-color: rgba(115, 66, 214, 0.1);
+  }
+  
+  .books{
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+
+  .book{
+    width: 25%;
+    padding: 24px;
+  }
+
+
+  .book__img{
+    max-height: 380px;
+    transition: all 300ms ease;
+    cursor: not-allowed;
+  }
+
+
+
+  .book__img--wrapper{
+    margin-bottom: 8px;
+    border-radius: 4px;
+    overflow: hidden;
+    display: flex;
+  }
+
+  .book:hover .book__img{
+    transform: scale(1.03);
+  }
+
+  .book__title{
+    font-size: 20px;
+    margin-bottom: 8px;
+  }
+
+  .book__title:hover{
+    text-decoration: underline;
+    cursor: not-allowed;
+  }
+
+  .book__ratings{
+    margin-bottom: 8px;
+    color: #fabf2a;
+  }
+
+  .book__price--normal{
+    text-decoration: line-through;
+    padding-right: 6px;
+    color: #bfbfbfc0;
+  }
+
+
+  #explore{    
+    background-color:rgba(115, 66, 214, 0.1) ;
+  }
+
+  footer{
+    background-color: #242424;
+  }
+
+  .footer__logo{
+    display: flex;
+  }
+
+  .footer__logo--img{
+    width: 160px;
+    filter: grayscale(1) invert(1);
+  }
+
+  .footer__link,
+  .footer__copyright{
+    color: #fff;
+  }
+  
+  .footer__list{
+    margin: 20px 0 24px 0;
+  }
+
+  
+  .footer__link{
+    padding: 0 8px;
+  }
+
+  .footer__copyright{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
+  }
+
+
+
+
+
+
+
+
 
   
